@@ -2,18 +2,21 @@ package com.dansoftware.libraryapp.util;
 
 import java.awt.*;
 import java.io.IOException;
-import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
 
 public final class SystemBrowser {
     public SystemBrowser() {
     }
 
+    public static boolean isSupported() {
+        return Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.BROWSE);
+    }
+
     public void browse(String url) {
         try {
-            if (Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.BROWSE)) {
-                Desktop.getDesktop().browse(URI.create(url));
-            }
-        } catch (IOException e) {
+            Desktop.getDesktop().browse(new URL(url).toURI());
+        } catch (IOException | URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
